Adds pages and meta tags

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -22,21 +22,21 @@ const metaDesc =
 <meta name='generator' content={Astro.generator} />
 
 <!-- Primary Meta Tags -->
-<title>{metaTitle}</title>
-<meta name='title' content={metaTitle} />
-<meta name='description' content={metaDesc} />
+<title>{title}</title>
+<meta name='title' content={title} />
+<meta name='description' content={description} />
 
 <!-- Open Graph / Facebook -->
 <meta property='og:type' content='website' />
 <meta property='og:url' content={Astro.url} />
-<meta property='og:title' content={metaTitle} />
-<meta property='og:description' content={metaDesc} />
+<meta property='og:title' content={title} />
+<meta property='og:description' content={description} />
 <meta property='og:image' content={new URL(image, Astro.url)} />
 
 <!-- Twitter -->
 <meta property='twitter:card' content='summary_large_image' />
 <meta name='twitter:site' content='@tamalchow' />
 <meta property='twitter:url' content={Astro.url} />
-<meta property='twitter:title' content={metaTitle} />
-<meta property='twitter:description' content={metaDesc} />
+<meta property='twitter:title' content={title} />
+<meta property='twitter:description' content={description} />
 <meta property='twitter:image' content={new URL(image, Astro.url)} />
