--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,7 +10,7 @@ import { SITE_TITLE } from '../config';
   <nav>
     <HeaderLink href='/'>Home (Resume)</HeaderLink>
     <HeaderLink href='/about'>About Tamal Chowdhury</HeaderLink>
-    <HeaderLink href='/content-creation'>Content Creation</HeaderLink>
+    <HeaderLink href='/content'>Content Creation</HeaderLink>
     <HeaderLink href='https://twitter.com/tamalchow' target='_blank'
       >Twitter</HeaderLink
     >
