--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,10 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
 <!DOCTYPE html>
 <html lang='en'>
   <head>
-    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+    <BaseHead
+      title="Tamal Chowdhury's Developer Advocate Resume"
+      description={SITE_DESCRIPTION}
+    />
   </head>
   <body>
     <Header title={SITE_TITLE} />
@@ -16,7 +19,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
       <div class='wrapper'>
         <h1>Tamal Chowdhury's Developer Advocate Resume</h1>
         <p>
-          Hey, you just landed in my website. I'm currently looking for my next
+          Hey, you just landed on my website. I'm currently looking for my next
           role in tech so please check out my resume below.
         </p>
         <p>
