Adds community and software pages

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,6 +11,8 @@ import { SITE_TITLE } from '../config';
     <HeaderLink href='/'>Home (Resume)</HeaderLink>
     <HeaderLink href='/about'>About Tamal Chowdhury</HeaderLink>
     <HeaderLink href='/content'>Content Creation</HeaderLink>
+    <HeaderLink href='/community'>Community Building</HeaderLink>
+    <HeaderLink href='/software-engineering'>Software Engineering</HeaderLink>
     <HeaderLink href='https://twitter.com/tamalchow' target='_blank'
       >Twitter</HeaderLink
     >
