--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -28,15 +28,16 @@ const metaDesc =
 
 <!-- Open Graph / Facebook -->
 <meta property='og:type' content='website' />
+<meta property='og:site_name' content='Tamal Chowdhury' />
 <meta property='og:url' content={Astro.url} />
 <meta property='og:title' content={title} />
 <meta property='og:description' content={description} />
 <meta property='og:image' content={new URL(image, Astro.url)} />
 
 <!-- Twitter -->
-<meta property='twitter:card' content='summary_large_image' />
+<meta name='twitter:card' content='summary_large_image' />
 <meta name='twitter:site' content='@tamalchow' />
-<meta property='twitter:url' content={Astro.url} />
-<meta property='twitter:title' content={title} />
-<meta property='twitter:description' content={description} />
-<meta property='twitter:image' content={new URL(image, Astro.url)} />
+<meta name='twitter:url' content={Astro.url} />
+<meta name='twitter:title' content={title} />
+<meta name='twitter:description' content={description} />
+<meta name='twitter:image' content={new URL(image, Astro.url)} />
