--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
 <html lang='en'>
   <head>
     <BaseHead
-      title="Tamal Chowdhury's Developer Advocate Resume"
+      title="Tamal Chowdhury's Frontend Engineer Resume"
       description={SITE_DESCRIPTION}
     />
   </head>
@@ -17,14 +17,14 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
     <Header title={SITE_TITLE} />
     <>
       <div class='wrapper'>
-        <h1>Tamal Chowdhury's Developer Advocate Resume</h1>
+        <h1>Tamal Chowdhury's Frontend Engineer Resume</h1>
         <p>
           Hey, you just landed on my website. I'm currently looking for my next
           role in tech so please check out my resume below.
         </p>
         <p>
           <a
-            href='https://docs.google.com/document/d/1jZ0OooyveHh_0cZ3MLxXTmue8G64F9u-rsdnpWYGDiw/edit?usp=sharing'
+            href='https://docs.google.com/document/d/1bdVDfordarXoFk2KWJSCbKJ-BYEaztCJgM0ytKri5dY/edit?usp=sharing'
             target='_blank'>View the Resume on Google Drive</a
           >
         </p>
@@ -33,7 +33,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
       </div>
 
       <iframe
-        src='https://docs.google.com/document/d/1jZ0OooyveHh_0cZ3MLxXTmue8G64F9u-rsdnpWYGDiw/edit?usp=sharing'
+        src='https://docs.google.com/document/d/1bdVDfordarXoFk2KWJSCbKJ-BYEaztCJgM0ytKri5dY/edit?usp=sharing'
         frameborder='0'
         width='100%'
         height='800px'></iframe>
