Changes bunch of name and wordings

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,8 +3,8 @@ const today = new Date();
 ---
 
 <footer>
-  Tamal Chowdhury built this site in {today.getFullYear()} with Astro. Copy this
-  site, but please don't copy my content.
+  Tamal Anwar Chowdhury built this site in {today.getFullYear()} with Astro. Copy
+  this site, but please don't copy my content.
 </footer>
 <style>
   footer {
