--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@ import { SITE_TITLE } from '../config';
   </h2>
   <nav>
     <HeaderLink href='/'>Home (Resume)</HeaderLink>
-    <HeaderLink href='/about'>About Tamal Chowdhury</HeaderLink>
+    <HeaderLink href='/about'>About Tamal Anwar Chowdhury</HeaderLink>
     <HeaderLink href='/content'>Content Creation</HeaderLink>
     <HeaderLink href='/community'>Community Building</HeaderLink>
     <HeaderLink href='/software-engineering'>Software Engineering</HeaderLink>
