--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
 <html lang='en'>
   <head>
     <BaseHead
-      title="Tamal Chowdhury's Frontend Engineer Resume"
+      title='Tamal Anwar Chowdhury, Software Engineer, Bangladesh'
       description={SITE_DESCRIPTION}
     />
   </head>
@@ -17,10 +17,12 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
     <Header title={SITE_TITLE} />
     <>
       <div class='wrapper'>
-        <h1>Tamal Chowdhury's Frontend Engineer Resume</h1>
+        <h1>Tamal Anwar Chowdhury's Software Engineer Resume</h1>
         <p>
-          Hey, you just landed on my website. I'm currently looking for my next
-          role in tech so please check out my resume below.
+          Hey, you just landed on my website. I am a software engineer, content
+          creator and do developer advocacy for various software products.
+          Currently looking for my next role in tech so please check out my
+          resume below 👇
         </p>
         <p>
           <a
