--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -10,9 +10,9 @@ export interface Props {
 }
 
 const { title, description, image = '/tamal-chowdhury-og.png' } = Astro.props;
-const metaTitle = "Tamal Chowdhury's Developer Advocate Resume";
+const metaTitle = "Tamal Anwar Chowdhury's Developer Advocate Resume";
 const metaDesc =
-  'Tamal Chowdhury is a software engineer and developer advocate from Bangladesh. He is currently looking for his next role in tech. Check out the resume';
+  'Tamal Anwar Chowdhury is a software engineer and developer advocate from Bangladesh. He is currently looking for his next role in tech. Check out the resume';
 ---
 
 <!-- Global Metadata -->
