Adds the new open graph image for social share

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -9,7 +9,11 @@ export interface Props {
   image?: string;
 }
 
-const { title, description, image = '/tamal-chowdhury-og.png' } = Astro.props;
+const {
+  title,
+  description,
+  image = '/tamal-anwar-chowdhury-og.png',
+} = Astro.props;
 const metaTitle = "Tamal Anwar Chowdhury's Developer Advocate Resume";
 const metaDesc =
   'Tamal Anwar Chowdhury is a software engineer and developer advocate from Bangladesh. He is currently looking for his next role in tech. Check out the resume';
