Adds biography and public photos

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
 <html lang='en'>
   <head>
     <BaseHead
-      title='Tamal Anwar Chowdhury, Software Engineer, Bangladesh'
+      title='Tamal Anwar Chowdhury, Bangladeshi Software Engineer'
       description={SITE_DESCRIPTION}
     />
   </head>
@@ -17,7 +17,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
     <Header title={SITE_TITLE} />
     <>
       <div class='wrapper'>
-        <h1>Tamal Anwar Chowdhury's Software Engineer Resume</h1>
+        <h1>Tamal Anwar Chowdhury, Bangladeshi Software Engineer</h1>
         <p>
           Hey, you just landed on my website. I am a software engineer, content
           creator and do developer advocacy for various software products.
