--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,11 +8,11 @@ import { SITE_TITLE } from '../config';
     {SITE_TITLE}
   </h2>
   <nav>
-    <HeaderLink href='/'>Home (Resume)</HeaderLink>
-    <HeaderLink href='/about'>About Tamal Anwar Chowdhury</HeaderLink>
+    <HeaderLink href='/'>Home</HeaderLink>
+    <HeaderLink href='/bio'>Biography</HeaderLink>
+    <HeaderLink href='/software-engineering'>Software Engineering</HeaderLink>
     <HeaderLink href='/content'>Content Creation</HeaderLink>
     <HeaderLink href='/community'>Community Building</HeaderLink>
-    <HeaderLink href='/software-engineering'>Software Engineering</HeaderLink>
     <HeaderLink href='https://twitter.com/tamalchow' target='_blank'
       >Twitter</HeaderLink
     >
