--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,28 +17,31 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
     <Header title={SITE_TITLE} />
     <>
       <div class='wrapper'>
-        <h1>Tamal Anwar Chowdhury, Bangladeshi Software Engineer</h1>
+        <div class='heading'>
+          <h1 class='en'>Offical Website</h1>
+          <h1 class='bangla'>অফিশিয়াল ওয়েবসাইট</h1>
+        </div>
         <p>
-          Hey, you just landed on my website. I am a software engineer, content
-          creator and do developer advocacy for various software products.
-          Currently looking for my next role in tech so please check out my
-          resume below 👇
-        </p>
-        <p>
-          <a
-            href='https://docs.google.com/document/d/1bdVDfordarXoFk2KWJSCbKJ-BYEaztCJgM0ytKri5dY/edit?usp=sharing'
-            target='_blank'>View the Resume on Google Drive</a
-          >
+          Hello, it's Tamal Anwar Chowdhury, Bangladeshi Software Engineer and
+          content creator. You will find everything you need to know about me
+          here.
         </p>
 
-        <p>Enjoy your visit!</p>
+        <div class='heading'>
+          <h1 class='en'>Show Don't Tell</h1>
+          <h1 class='bangla'>কথা কম কাজ বেশি</h1>
+        </div>
+        <p>Making some animated GIFs for this section.</p>
+
+        <h1>Featured Content</h1>
+        <p>
+          I am going big on videos these days. Check out some of my best videos
+          here.
+        </p>
+
+        <h1>My Inspirations</h1>
+        <p>Rockstar Games websites have been a huge inspiration in my life.</p>
       </div>
-
-      <iframe
-        src='https://docs.google.com/document/d/1bdVDfordarXoFk2KWJSCbKJ-BYEaztCJgM0ytKri5dY/edit?usp=sharing'
-        frameborder='0'
-        width='100%'
-        height='800px'></iframe>
     </>
     <Footer />
   </body>
