adds menu font and style

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,11 +3,11 @@ import HeaderLink from './HeaderLink.astro';
 import { SITE_TITLE } from '../config';
 ---
 
-<header class="wrapper">
+<header class='wrapper'>
   <h2>
     {SITE_TITLE}
   </h2>
-  <nav>
+  <nav class='menu'>
     <HeaderLink href='/'>Home</HeaderLink>
     <HeaderLink href='/bio'>Biography</HeaderLink>
     <HeaderLink href='/resume'>Resume</HeaderLink>
