--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,10 +17,6 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
     <Header title={SITE_TITLE} />
     <>
       <div class='wrapper'>
-        <div class='heading'>
-          <h1 class='en'>Offical Website</h1>
-          <h1 class='bangla'>অফিশিয়াল ওয়েবসাইট</h1>
-        </div>
         <p>
           Hello, it's Tamal Anwar Chowdhury, Bangladeshi Software Engineer and
           content creator. You will find everything you need to know about me
@@ -31,13 +27,29 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
           <h1 class='en'>Show Don't Tell</h1>
           <h1 class='bangla'>কথা কম কাজ বেশি</h1>
         </div>
+
+        <div class='content'>
+          <div class='item one'></div>
+          <div class='item two'></div>
+          <div class='item three'></div>
+        </div>
+
         <p>Making some animated GIFs for this section.</p>
 
-        <h1>Featured Content</h1>
-        <p>
-          I am going big on videos these days. Check out some of my best videos
-          here.
-        </p>
+        <div class='heading'>
+          <h1 class='en'>Featured Content</h1>
+          <h1 class='bangla'>সবচেয়ে জোস কাজগুলা</h1>
+          <p>
+            I am going big on videos these days. Check out some of my best
+            videos here.
+          </p>
+        </div>
+
+        <div class='content'>
+          <div class='item one'></div>
+          <div class='item two'></div>
+          <div class='item three'></div>
+        </div>
 
         <h1>My Inspirations</h1>
         <p>Rockstar Games websites have been a huge inspiration in my life.</p>
