--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,6 +6,8 @@
 
  :root {
 	--yellow: #ffeb01;
+	--bg: #142951;
+	--shade: #50A4AB;
  }
 
 @font-face {
@@ -69,13 +71,20 @@
 
 }
 
+.item img {
+	display: block;
+}
+
 
 .item {
-	background: plum;
+	background: white;
 	aspect-ratio: 9/16;
 	border-radius: 7px;
+	overflow: hidden;
 
-	box-shadow: -10px 10px 0 palevioletred;
+	box-shadow:
+	-2px 2px 10px #333,	
+	-10px 10px 0 var(--shade);
 }
 
 .item.one {
@@ -96,7 +105,7 @@ body {
 	margin: auto;
 	padding: 20px;
 	text-align: left;
-	background-color: darkslateblue;
+	background-color: var(--bg);
 	word-wrap: break-word;
 	overflow-wrap: break-word;
 	line-height: 1.5;
@@ -119,7 +128,7 @@ b {
 	color: #222;
 }
 a {
-	color: #3273dc;
+	color: var(--yellow);
 }
 nav a {
 	margin-right: 10px;
