Adds links and ready to ship

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,9 +2,8 @@
 const today = new Date();
 ---
 
-<footer>
-  Tamal Anwar Chowdhury built this site in {today.getFullYear()} with Astro. Copy
-  this site, but please don't copy my content.
+<footer class='footer'>
+  Tamal Anwar Chowdhury built this site in {today.getFullYear()} with Astro.
 </footer>
 <style>
   footer {
