--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,16 +4,15 @@ import { SITE_TITLE } from '../config';
 ---
 
 <header class='wrapper'>
-  <h2>
+  <h1>
     {SITE_TITLE}
-  </h2>
+  </h1>
   <nav class='menu'>
     <HeaderLink href='/'>Home</HeaderLink>
     <HeaderLink href='/bio'>Biography</HeaderLink>
-    <HeaderLink href='/resume'>Resume</HeaderLink>
-    <HeaderLink href='/software-engineering'>Software Engineering</HeaderLink>
-    <HeaderLink href='/content'>Content Creation</HeaderLink>
-    <HeaderLink href='/community'>Community Building</HeaderLink>
+    <HeaderLink href='/hire'>Hire Me</HeaderLink>
+    <HeaderLink href='/spon'>Sponsorship</HeaderLink>
+    <HeaderLink href='/contact'>Contact</HeaderLink>
   </nav>
 </header>
 <style>
