--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
           here.
         </p>
 
-        <div class='heading'>
+        <!-- <div class='heading'>
           <h1 class='en'>Show Don't Tell</h1>
           <h1 class='bangla'>কথা কম কাজ বেশি</h1>
           <p>Check out some of my best software work:</p>
@@ -37,85 +37,106 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
           <div class='item one'></div>
           <div class='item two'></div>
           <div class='item three'></div>
-        </div>
+        </div> -->
 
-        <p>Making some animated GIFs for this section.</p>
+        <section>
+          <div class='heading'>
+            <h1 class='en'>Featured Content</h1>
+            <h1 class='bangla'>সবচেয়ে জোস ভিডিওগুলা</h1>
+            <p>
+              I am going big on videos these days. Check out some of my best
+              videos here.
+            </p>
+          </div>
 
-        <div class='heading'>
-          <h1 class='en'>Featured Content</h1>
-          <h1 class='bangla'>সবচেয়ে জোস ভিডিওগুলা</h1>
-          <p>I am going big on videos these days.</p>
-          <p>Check out some of my best videos here.</p>
-        </div>
-
-        <div class='content'>
-          <div class='item one'>
-            <a
-              href='https://www.tiktok.com/@tamalchow/video/7218895918823640321'
-              target='_blank'
-            >
-              <img
-                src='/img/thumb_wifi.jpg'
-                alt='No wifi after power cut video'
-              />
-            </a>
+          <div class='content'>
+            <div class='item one'>
+              <a
+                href='https://www.tiktok.com/@tamalchow/video/7218895918823640321'
+                target='_blank'
+              >
+                <img
+                  src='/img/thumb_wifi.jpg'
+                  alt='No wifi after power cut video'
+                />
+              </a>
+            </div>
+            <div class='item two'>
+              <a
+                href='https://www.tiktok.com/@tamalchow/video/7217767040415796482'
+                target='_blank'
+              >
+                <img
+                  src='/img/thumb_javajs.jpg'
+                  alt='Are Java and JavaScript the same?'
+                />
+              </a>
+            </div>
+            <div class='item three'>
+              <a
+                href='https://www.tiktok.com/@tamalchow/video/7218596054202207490'
+                target='_blank'
+              >
+                <img
+                  src='/img/thumb_cyb.jpg'
+                  alt='Cybersecurity setup in mobile'
+                />
+              </a>
+            </div>
           </div>
-          <div class='item two'>
-            <a
-              href='https://www.tiktok.com/@tamalchow/video/7217767040415796482'
-              target='_blank'
-            >
-              <img
-                src='/img/thumb_javajs.jpg'
-                alt='Are Java and JavaScript the same?'
-              />
-            </a>
-          </div>
-          <div class='item three'>
-            <a
-              href='https://www.tiktok.com/@tamalchow/video/7218596054202207490'
-              target='_blank'
-            >
-              <img
-                src='/img/thumb_cyb.jpg'
-                alt='Cybersecurity setup in mobile'
-              />
-            </a>
-          </div>
-        </div>
+        </section>
 
         <!-- <div class='heading'>
           <h1 class='en'>Latest News</h1>
           <h1 class='bangla'>লেটেস্ট খবর</h1>
           <p>A blog feed will follow here..</p>
         </div> -->
-        <div class='heading'>
-          <h1 class='en'>Connect with Me</h1>
-          <h1 class='bangla'>সোশাল মিডিয়াগুলা</h1>
-        </div>
-        <nav class='socials'>
-          <a href='https://facebook.com/tamalchowdhury.profile' target='_blank'
-            >Facebook</a
-          >
-          <a href='https://instagram.com/tamalchowdhury.insta' target='_blank'
-            >Instagram</a
-          >
-          <a href='https://tiktok.com/@tamalchow' target='_blank'>TikTok</a>
-          <a href='https://twitter.com/tamalchow' target='_blank'>Twitter</a>
-          <a href='https://www.youtube.com/@tamalchowdhury' target='_blank'
-            >YouTube</a
-          >
-          <a href='https://linkedin.com/in/tamalchowdhury' target='_blank'
-            >Linkedin</a
-          >
-          <a href='https://github.com/tamalchowdhury' target='_blank'>GitHub</a>
-          <a
-            href='https://play.google.com/store/apps/dev?id=5350464485153942303'
-            target='_blank'>Google Play</a
-          >
-        </nav>
+        <section>
+          <div class='heading'>
+            <h1 class='en'>Connect with Me</h1>
+            <h1 class='bangla'>সোশাল মিডিয়াগুলা</h1>
+
+            <nav class='socials'>
+              <a
+                href='https://facebook.com/tamalchowdhury.profile'
+                target='_blank'>Facebook</a
+              >
+              <a
+                href='https://instagram.com/tamalchowdhury.insta'
+                target='_blank'>Instagram</a
+              >
+              <a href='https://tiktok.com/@tamalchow' target='_blank'>TikTok</a>
+              <a href='https://twitter.com/tamalchow' target='_blank'>Twitter</a
+              >
+              <a href='https://www.youtube.com/@tamalchowdhury' target='_blank'
+                >YouTube</a
+              >
+              <a href='https://linkedin.com/in/tamalchowdhury' target='_blank'
+                >Linkedin</a
+              >
+              <a href='https://github.com/tamalchowdhury' target='_blank'
+                >GitHub</a
+              >
+              <a
+                href='https://play.google.com/store/apps/dev?id=5350464485153942303'
+                target='_blank'>Google Play</a
+              >
+            </nav>
+          </div>
+          <section>
+            <div class='heading'>
+              <h1 class='en'>Other Pages</h1>
+              <h1 class='bangla'>অন্যান্য পেজগুলা</h1>
+              <nav>
+                <a href='/software-engineering'>Software Engineering</a>
+                <a href='/content'>Content Creation</a>
+                <a href='/community'>Community Building</a>
+              </nav>
+            </div>
+          </section>
+        </section>
       </div>
+      <Footer />
     </>
-    <Footer />
   </body>
 </html>
