--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,8 +4,10 @@ import { SITE_TITLE } from '../config';
 ---
 
 <header class='wrapper'>
-  <h1>
-    {SITE_TITLE}
+  <h1 class='site_title'>
+    <a href='/'>
+      {SITE_TITLE}
+    </a>
   </h1>
   <nav class='menu'>
     <HeaderLink href='/'>Home</HeaderLink>
