--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -135,6 +135,21 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
             </div>
           </section>
         </section>
+        <section>
+          <div class='heading'>
+            <h1 class='bangla'>My Inspirations</h1>
+            <p>I am heavily inspired by Rockstar Games GTA web designs.</p>
+          </div>
+          <p>
+            P.S.: If you are a web CTF enthusiast, I have also hidden (1)
+            artifact in this website. If you find it, I will give you a shout
+            out on my social media.
+          </p>
+          <!-- <p>
+            Yes, the artifact is https://www.youtube.com/watch?v=p0g_2KeymZ4
+            --so simple isn't it? Next time it will be a bit harder. Check back often for more and more artifacts like this one.
+          </p> -->
+        </section>
       </div>
       <Footer />
     </>
