Adds social links

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,12 @@ const today = new Date();
 ---
 
 <footer class='footer'>
-  Tamal Anwar Chowdhury built this site in {today.getFullYear()} with Astro.
+  Tamal Anwar Chowdhury built this site in {today.getFullYear()} with <a
+    href='https://docs.astro.build/en/getting-started/'
+    target='_blank'
+  >
+    Astro.
+  </a>
 </footer>
 <style>
   footer {
