--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -92,7 +92,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
           <p>A blog feed will follow here..</p>
         </div> -->
         <section>
-          <div class='heading'>
+          <div class='heading' id='socials'>
             <h1 class='en'>Connect with Me</h1>
             <h1 class='bangla'>সোশাল মিডিয়াগুলা</h1>
 
@@ -142,8 +142,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
           </div>
           <p>
             P.S.: If you are a web CTF enthusiast, I have also hidden (1)
-            artifact in this website. If you find it, I will give you a shout
-            out on my social media.
+            artifact in this website. I hope you will enjoy it.
           </p>
           <!-- <p>
             Yes, the artifact is https://www.youtube.com/watch?v=p0g_2KeymZ4
