Adds gta 3 website link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -138,7 +138,12 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
         <section>
           <div class='heading'>
             <h1 class='bangla'>My Inspirations</h1>
-            <p>I am heavily inspired by Rockstar Games GTA web designs.</p>
+            <p>
+              I am heavily inspired by Rockstar Games
+              <a href='https://classicgtasites.com/iii/' target='_blank'>
+                GTA web designs.
+              </a>
+            </p>
           </div>
           <p>
             P.S.: If you are a web CTF enthusiast, I have also hidden (1)
