--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -16,6 +16,19 @@ const {
 } = Astro.props;
 ---
 
+<!-- Google tag (gtag.js) -->
+<script async src='https://www.googletagmanager.com/gtag/js?id=G-TZFY3QDPLZ'
+></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag('js', new Date());
+
+  gtag('config', 'G-TZFY3QDPLZ');
+</script>
+
 <!-- Global Metadata -->
 <meta charset='utf-8' />
 <meta name='viewport' content='width=device-width,initial-scale=1' />
