updates insta handle

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -102,7 +102,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
                 target='_blank'>Facebook</a
               >
               <a
-                href='https://instagram.com/tamalchowdhury.insta'
+                href='https://instagram.com/tamal.anwar.chowdhury'
                 target='_blank'>Instagram</a
               >
               <a href='https://tiktok.com/@tamalchow' target='_blank'>TikTok</a>
